--- a/index.html
+++ b/index.html
@@ -12,22 +12,30 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  />
     <link rel="stylesheet" href="Develop/style.css" />
     <title>Weather App</title>
   </head>
   <!--Parse data to get City Name, date, icon of weather conditions, temp, humidity, wind speed and UV index-->
   <body>
-    <article id = "content-wrapper">
-    <main>
-      <div id = "searchArea">
-        <div id = "displaySearch"></div>
-      </div>
-    </main>
+    <header class = "jumbotron"><h1>The Weather Dashboard</h1></header>
+    <article id = "textarea">
+    <aside>
+      <main class="flex-row justify-space-between">
+        <div class="col-12 col-md-4">
+    
+          <div class="card">
+            <h3 class="card-header">Search By City</h3>
+            <form id="user-form" class="card-body">
+              <input name="username" id="username" type="text" placeholder="Santa Fe" autofocus="true" class="form-input" />
+              <button type="submit" class="submitBtn">Submit</button>
+            </form>
+          </div>
+    </aside>
   
-    <section class = "currentWeather">Current Weather
+    <main class = "currentWeather">Current Weather
     <div id="cityName"></div>
       <div id="date"></div>
       <div id="icon"></div>
@@ -35,13 +43,14 @@
       <div id="humidity"></div>
       <div id="wind"></div>
       <div id="UV"></div>
-    </section>
+    </main>
 
     <section class = "cards"></section>
   </article>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
     <script src="Develop/script.js"></script>
   </body>
 </html>
