API calls working, data parsed, need to link to HTML and style

--- a/index.html
+++ b/index.html
@@ -36,16 +36,27 @@
     </aside>
   
     <main class = "currentWeather">Current Weather
-    <div id="cityName"></div>
+    <div class="cityName"></div>
       <div id="date"></div>
-      <div id="icon"></div>
+      <div class="icon"></div>
       <div id="temp"></div>
       <div id="humidity"></div>
       <div id="wind"></div>
-      <div id="UV"></div>
+      <div id="UVI"></div>
     </main>
 
     <section class = "cards"></section>
+    <main class = "currentWeather">5 Day Forecast
+      <div class="cityName"></div>
+        <div id="fiveDayDate "></div>
+        <div class="icon"></div>
+        <div id="fiveDayTemp"></div>
+        <div id="fiveDayWind"></div>
+        <div id="fiveDayHumidity"></div>
+        
+      </main>
+
+
   </article>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
