--- a/index.html
+++ b/index.html
@@ -21,32 +21,27 @@
   <!--Parse data to get City Name, date, icon of weather conditions, temp, humidity, wind speed and UV index-->
   <body>
     <header class = "jumbotron"><h1>The Weather Dashboard</h1></header>
-    <div id = "textarea">
-    <div>
-      <div class="flex-row justify-space-between">
-        <div class="col-12 col-md-4">
-    
-          <div class="card">
+
+      <div class="row flex-row justify-space-between">
+          <div class="card col-3 search">
             <h3 class="card-header">Search By City</h3>
             <form id="user-form" class="card-body">
               <input name="username" id="username" type="text" placeholder="Santa Fe" autofocus="true" class="form-input" />
               <button type="submit" class="submitBtn">Submit</button>
             </form>
           </div>
-        </div>
-      </div>
-    </div>
   
-    <div class = "currentWeather">Current Weather
-    <div id ="cityName1"></div>
-      <div id="date"></div>
-      <div id ="icon1"></div>
-      <div id="temp"></div>
-      <div id="humidity"></div>
-      <div id="wind"></div>
-      <div id="UVI"></div>
-    </div>
-
+   <div class = "col-8">
+     <div class = "currentWeather">
+       <h2 class= "current font-weight-bolder" id ="cityName1"></h2>
+        <div id="date"></div>
+        <div id ="icon1"></div>
+        <div id="temp"></div>
+        <div id="humidity"></div>
+        <div id="wind"><div>
+        <div id="UVI"></div>
+     </div>
+     </div>
     <div class = "fiveDayForecast">5 Day Forecast
       <div id="cityName2"></div>
         <div id="fiveDayDate "></div>
@@ -54,10 +49,10 @@
         <div id="fiveDayTemp"></div>
         <div id="fiveDayWind"></div>
         <div id="fiveDayHumidity"></div>
-        
+     </div>
     </div>
   </div>
-
+  </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
