created 5 Day cards and fixed alignment

--- a/index.html
+++ b/index.html
@@ -42,16 +42,27 @@
         <div id="UVI"></div>
      </div>
      </div>
-    <div class = "fiveDayForecast">5 Day Forecast
-      <div id="cityName2"></div>
-        <div id="fiveDayDate "></div>
-        <div id ="icon2"></div>
-        <div id="fiveDayTemp"></div>
-        <div id="fiveDayWind"></div>
-        <div id="fiveDayHumidity"></div>
-     </div>
     </div>
-  </div>
+  
+  <h3 class = "font-weight-bolder">5 Day Forecast:</h3>
+    <div class="card-deck">
+      <div class="card col-1 cardColor">
+        <ul id="dayOne"></ul>
+        </div>
+        <div class="card col-1 cardColor">
+          <ul id="dayTwo"></ul>
+        </div>
+        <div class="card col-1 cardColor">
+          <ul id="dayThree"></ul>
+          </div>
+          <div class="card col-1 cardColor">
+            <ul id="dayFour"></ul>
+          </div>
+          <div class="card col-1 cardColor">
+            <ul id="dayFive"></ul>
+          </div>
+      </div>
+    </div>
   </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
