5 Day data added and search finctionality added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="card col-3 search">
             <h3 class="card-header">Search By City</h3>
             <form id="user-form" class="card-body">
-              <input name="username" id="username" type="text" placeholder="Santa Fe" autofocus="true" class="form-input" />
+              <input name="searchInput" id="searchInput" type="text" placeholder="Santa Fe" autofocus="true" class="form-input" />
               <button type="submit" class="submitBtn">Submit</button>
             </form>
           </div>
@@ -46,19 +46,19 @@
   
   <h3 class = "font-weight-bolder">5 Day Forecast:</h3>
     <div class="card-deck">
-      <div class="card col-1 cardColor">
+      <div class="card col cardColor">
         <ul id="0"></ul>
         </div>
-        <div class="card col-1 cardColor">
+        <div class="card col cardColor">
           <ul id="1"></ul>
         </div>
-        <div class="card col-1 cardColor">
+        <div class="card col cardColor">
           <ul id="2"></ul>
           </div>
-          <div class="card col-1 cardColor">
+          <div class="card col cardColor">
             <ul id="3"></ul>
           </div>
-          <div class="card col-1 cardColor">
+          <div class="card col cardColor">
             <ul id="4"></ul>
           </div>
       </div>
